<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mm.n_deb.batch_info">

    <TextView
        android:id="@+id/q_attempted_txtview"
        android:layout_width="135dp"
        android:layout_height="23dp"
        android:text="@string/questions_attempted_text"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/incorrect_attem_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_incorrect_attempts"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="88dp" />

    <Button
        android:id="@+id/rev_inc_button"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/review_incorrect_button"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="269dp" />

    <Button
        android:id="@+id/tagged_quest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="172dp"
        android:text="@string/tagged_question_butt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/show_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:text="@string/all_questions_butt"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:id="@+id/quest_attem_txtviewval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/incorrect_attem_txtviewval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/batch_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/batch"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/batch_val_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="196dp" />

</android.support.constraint.ConstraintLayout>
